--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.1",
     "react-redux": "^5.0.5",
+    "realm": "^1.10.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
